--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -16,6 +16,8 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^4.0.0",
+    "react-lorem-ipsum": "^1.4.10",
     "react-responsive-cards": "^3.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
